# pakalon-web

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  images-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/dev/: prerender-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/dev/types/: validator.ts
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: _not-found.html  _not-found.rsc  dashboard.html  dashboard.rsc  index.html  login.html  login.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js  pricing.html  pricing.rsc  verify.html  verify.rsc
.next/server/pages/: 500.html
.next/static/chunks/: 09a119f26e5434dd.js  (+11 more)
.next/types/: routes.d.ts  validator.ts
app/: __init__.py  layout.tsx  main.py  page.tsx
app/changelog/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/docs/: page.tsx
app/login/: page.tsx
app/pricing/: page.tsx
components/: Sidebar.tsx  TokenUsageChart.tsx
components/automations/: AutomationsShell.tsx
lib/: api.ts
(+315 files in other folders)
