[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pakalon-web-backend-runner"
version = "0.1.0"
description = "Backend runner support for launching Pakalon FastAPI from the pakalon-web directory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "aiosqlite>=0.20.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg>=3.2.0",
    "redis[hiredis]>=5.2.0",
    "clerk-backend-api>=2.0.0",
    "polar-sdk>=0.14.0",
    "resend>=2.8.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.20",
    "svix>=1.45.0",
    "aiofiles>=24.1.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "psycopg-binary>=3.3.3",
    "email-validator>=2.3.0",
    "fakeredis>=2.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
